--- a/pages/farmacia.html
+++ b/pages/farmacia.html
@@ -60,9 +60,15 @@
     <header class="headerFarmacia">
     </header>
 
-    <main class="farmacia" id="mainFarmacia">
+    <main class="farmaciayjuguetes" id="mainFarmacia">
         <aside class="filtros">
             <h2>Farmacia</h2>
+            <select name="" id="selectorFiltro">
+                <option value="sinFiltro" selected disabled >Filtrar por</option>
+                <option value="normal">Predeterminado</option>
+                <option value="barato">Menor precio</option>
+                <option value="caro">Mayor precio</option>
+            </select>
         </aside>
         <div class="container">
             <section class="gondola" id="gondola">
@@ -99,7 +105,7 @@
         </div>
         <span class="copyrigth">&copy; Copyrigth - Todos los derechos reservados Lucas Cabezas</span>
     </footer>
-
+    <script src="../tata-master/dist/tata.js"></script>
     <script src="../scripts/script.js"></script>
 </body>
 </html>
