--- a/pages/farmacia.html
+++ b/pages/farmacia.html
@@ -17,7 +17,7 @@
     <!-- ICONOS FOOTER -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <title>Farmacia</title>
+    <title>Farmacia - Franco Pet-Shop</title>
 </head>
 
 <body>
@@ -30,14 +30,16 @@
             </a>
         </div>
         <nav class="barraNav">
-            <a href="../index.html">Home</a>
+            <a href="../index.html">Inicio</a>
             <a href="#">Farmacia</a>
             <a href="./juguetes.html">Juguetes</a>
             <a href="./contacto.html">Contacto</a>
-            <a href="" id="botonCarro">
-                <img class="carroC" src="../assets/carrito.png" alt="">
+            <a href="" id="botonCarro" class="carroTodo"><img class="carroC" src="../assets/carrito.png" alt="">
                 <div class="cantCarro" id="cantCarroNav"></div>
             </a>
+            <div class="btnNav" id="btnNav">
+                <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </div>
 
@@ -58,7 +60,28 @@
     </div>
 
     <header class="headerFarmacia">
+                <!-- FOTO DE CABECERA -->
     </header>
+
+
+     <!-- MENU RESPONSIVE  -->
+     <div class="modalResponsive1" id="modalResponsive">
+        <div class="navResponsive1" id="navResponsive">
+            <div class="closeResponsive1" id="closeResponsive">&times;</div>
+            <a href="../index.html">Inicio</a>
+            <a href="#">Farmacia</a>
+            <a href="./juguetes.html">Juguetes</a>
+            <a href="./contacto.html">Contacto</a>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
 
     <main class="farmaciayjuguetes" id="mainFarmacia">
         <aside class="filtros">
@@ -99,12 +122,15 @@
             </ul>
             <ul>
                 <li><strong>Redes sociales</strong></li>
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <div class="redes">
+                    <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                </div>
             </ul>
-        </div>
-        <span class="copyrigth">&copy; Copyrigth - Todos los derechos reservados Lucas Cabezas</span>
-    </footer>
+      
+    </div>
+    <span class="copyrigth">&copy; Copyright - Todos los derechos reservados Lucas Cabezas</span>
+</footer>
     <script src="../tata-master/dist/tata.js"></script>
     <script src="../scripts/script.js"></script>
 </body>
