--- a/pages/juguetes.html
+++ b/pages/juguetes.html
@@ -17,7 +17,7 @@
     <!-- ICONOS FOOTER -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <title>Juguetes</title>
+    <title>Juguetes - Franco Pet-Shop</title>
 </head>
 
 <body>
@@ -30,13 +30,16 @@
             </a>
         </div>
         <nav class="barraNav">
-            <a href="../index.html">Home</a>
+            <a href="../index.html">Inicio</a>
             <a href="./farmacia.html">Farmacia</a>
             <a href="#">Juguetes</a>
             <a href="./contacto.html">Contacto</a>
-            <a href="" id="botonCarro"><img class="carroC" src="../assets/carrito.png" alt="">
+            <a href="" id="botonCarro" class="carroTodo"><img class="carroC" src="../assets/carrito.png" alt="">
                 <div class="cantCarro" id="cantCarroNav"></div>
             </a>
+            <div class="btnNav" id="btnNav">
+                <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </div>
 
@@ -56,7 +59,26 @@
     </div>
 
     <header class="headerJuguetes">
+                <!-- FOTO DE CABECERA -->
     </header>
+
+    <!-- MENU RESPONSIVE  -->
+    <div class="modalResponsive1" id="modalResponsive">
+        <div class="navResponsive1" id="navResponsive">
+            <div class="closeResponsive1" id="closeResponsive">&times;</div>
+            <a href="../index.html">Inicio</a>
+            <a href="./farmacia.html">Farmacia</a>
+            <a href="#">Juguetes</a>
+            <a href="./contacto.html">Contacto</a>
+        </div>
+    </div>
+
+
+
+
+
+
+
 
     <main class="farmaciayjuguetes" id="mainJuguetes">
         <aside class="filtros">
@@ -95,12 +117,15 @@
             </ul>
             <ul>
                 <li><strong>Redes sociales</strong></li>
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <div class="redes">
+                    <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                </div>
             </ul>
-        </div>
-        <span class="copyrigth">&copy; Copyrigth - Todos los derechos reservados Lucas Cabezas</span>
-    </footer>
+      
+    </div>
+    <span class="copyrigth">&copy; Copyright - Todos los derechos reservados Lucas Cabezas</span>
+</footer>
 
     <script src="../tata-master/dist/tata.js"></script>
     <script src="../scripts/script.js"></script>
