--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
 
 
     <header class="headerContacto">
-                <!-- FOTO DE CABECERA -->
+        <!-- FOTO DE CABECERA -->
     </header>
 
     <!-- MENU RESPONSIVE  -->
@@ -72,10 +72,7 @@
         </div>
     </div>
 
-
-
-
-
+    
     <main class="mainContacto" id="mainContacto">
         <div class="formulario">
             <div class="titulo">
@@ -125,11 +122,13 @@
             </ul>
             <ul>
                 <li><strong>Redes sociales</strong></li>
-                <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <div class="redes">
+                    <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                </div>
             </ul>
         </div>
-        <span class="copyrigth">&copy; Copyrigth - Todos los derechos reservados Lucas Cabezas</span>
+        <span class="copyrigth">&copy; Copyright - Todos los derechos reservados Lucas Cabezas</span>
     </footer>
 
     <script src="../tata-master/dist/tata.js"></script>
